--- a/View/octsend/package.json
+++ b/View/octsend/package.json
@@ -18,12 +18,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  
+  "plugin":[
+    "react"
+  ],
+
   "browserslist": {
     "production": [
       ">0.2%",
