--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "pg": "^8.7.3",
-    "react-path": "^0.0.2"
+    "react-path": "^0.0.2",
+    "xhr2": "^0.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
