--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node app.js",
-    "heroku-postbuild": "cd View/octsend && npm install && npm run build"
+    "server": "node app.js"
   },
   "keywords": [],
   "author": "",
